--- a/.github/workflows/stage191-ci.yml
+++ b/.github/workflows/stage191-ci.yml
@@ -5,12 +5,27 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+permissions:
+  actions: read
+  contents: read
+
 jobs:
-  sanity:
+  claims_and_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Python version
         run: python --version
-      - name: Repo listing
-        run: ls -la
+
+      - name: Fetch latest completed Actions run -> build claim_matrix -> gate
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          python tools/fetch_actions_results.py --repo mokkunsuzuki-code/stage191 --branch main --pick latest_completed
+          python tools/generate_claim_matrix.py
+          python tools/ci_gate.py --require-run-success
+
+      - name: Show claim_matrix
+        run: |
+          sed -n '1,120p' out/ci/claim_matrix.md
