Stage191: allow current run in_progress (A-plan); upload evidence even if gate fails

--- a/.github/workflows/stage191-ci.yml
+++ b/.github/workflows/stage191-ci.yml
@@ -1,41 +1,1 @@
-name: stage191-ci
-
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-permissions:
-  actions: read
-  contents: read
-
-jobs:
-  claims_and_tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Python version
-        run: python --version
-
-      - name: Fetch THIS run -> build claim_matrix -> gate
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # A案の核心：この workflow 自身の run_id を証拠として固定化
-          python tools/fetch_actions_results.py --repo mokkunsuzuki-code/stage191 --run-id "${{ github.run_id }}"
-          python tools/generate_claim_matrix.py
-          python tools/ci_gate.py --require-run-success
-
-      - name: Show claim_matrix
-        run: |
-          sed -n '1,200p' out/ci/claim_matrix.md
-
-      - name: Upload evidence (claim_matrix + raw JSON)
-        uses: actions/upload-artifact@v4
-        with:
-          name: stage191-evidence
-          path: |
-            out/ci/actions_runs.json
-            out/ci/actions_jobs.json
-            out/ci/claim_matrix.md
+（上のYAML全文）
