--- a/.github/workflows/stage191-ci.yml
+++ b/.github/workflows/stage191-ci.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests
+          pip install requests pyyaml
 
       - name: Prepare output dirs
         run: |
@@ -98,12 +98,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # NOTE: fetch_actions_results.py does NOT accept --out-dir (per usage)
           python tools/fetch_actions_results.py \
             --repo "${{ github.repository }}" \
             --run-id "${{ github.run_id }}"
 
-          # Normalize: ensure out/ci/actions_jobs.json exists even if tool writes elsewhere
           if [ -f out/ci/actions_jobs.json ]; then
             echo "[OK] found out/ci/actions_jobs.json"
           else
