Stage191: bind claims A2-A5 to required CI jobs (proof structure)

--- a/claims/claims.yaml
+++ b/claims/claims.yaml
@@ -1,58 +1,44 @@
-# MIT License © 2025 Motohiro Suzuki
-# Stage194: Claim ↔ Lemma ↔ Attack (Job/Evidence) mapping
+# Stage191 claims.yaml (Claim ↔ Lemma ↔ CI Job binding)
+# Internal: fail-closed gate relies on these bindings.
 
 lemmas:
   L_replay_detection:
-    title: "Replay attack detection is enforced by CI"
-    required_jobs:
-      - attack_replay
-    evidence_paths:
-      - out/ci/actions_jobs.json
-      - out/ci/claim_status.md
-
+    title: "Replay is detected by transcript / nonce binding"
+    evidence_paths: []
   L_downgrade_detection:
-    title: "Downgrade attack detection is enforced by CI"
-    required_jobs:
-      - attack_downgrade
-    evidence_paths:
-      - out/ci/actions_jobs.json
-      - out/ci/claim_status.md
-
-  L_interop_smoke:
-    title: "Interop smoke tests are green"
-    required_jobs:
-      - interop_smoke
-    evidence_paths:
-      - out/ci/actions_jobs.json
-
-  L_audit_suite:
-    title: "Audit suite (no secret logging, zeroize rules, formal checks) is green"
-    required_jobs:
-      - zeroize_rules
-      - no_secret_logging
-      - proverif
-      - tamarin
-    evidence_paths:
-      - out/ci/claim_status.md
-      - audit.log
+    title: "Downgrade is detected and rejected"
+    evidence_paths: []
+  L_interop_minimal:
+    title: "Minimal interop smoke passes"
+    evidence_paths: []
+  L_no_secret_logging:
+    title: "Secrets are not logged"
+    evidence_paths: []
+  L_zeroize:
+    title: "Key material is zeroized"
+    evidence_paths: []
+  L_formal:
+    title: "Formal model checks pass (ProVerif/Tamarin)"
+    evidence_paths: []
 
 claims:
   A2:
     title: "Replay attack is detected / rejected"
-    required_lemmas:
-      - L_replay_detection
+    required_lemmas: [L_replay_detection]
+    required_jobs: [attack_replay]
 
   A3:
     title: "Downgrade attack is detected / rejected"
-    required_lemmas:
-      - L_downgrade_detection
+    required_lemmas: [L_downgrade_detection]
+    required_jobs: [attack_downgrade]
 
   A4:
-    title: "Interop / compatibility checks are validated"
-    required_lemmas:
-      - L_interop_smoke
+    title: "Implementation safety properties hold (no secret logging / zeroize)"
+    required_lemmas: [L_no_secret_logging, L_zeroize]
+    required_jobs: [no_secret_logging, zeroize_rules]
 
   A5:
-    title: "Audit / security checks are executed"
-    required_lemmas:
-      - L_audit_suite
+    title: "Interoperability and formal checks support the spec"
+    required_lemmas: [L_interop_minimal, L_formal]
+    required_jobs: [interop_smoke, proverif, tamarin]
+
